WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311335
REGRESSION(
310393@main
): [GTK][WPE] WebGL context lost after dma-buf/EGLImage refactorization
https://bugs.webkit.org/show_bug.cgi?id=311335
Summary
REGRESSION(310393@main): [GTK][WPE] WebGL context lost after dma-buf/EGLImage...
Nikolas Zimmermann
Reported
2026-04-02 03:43:26 PDT
This broke WebGL/WebXR, due to mixing of system-EGL / ANGLE.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2026-04-02 03:44:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61903
EWS
Comment 2
2026-04-03 01:08:19 PDT
Committed
310506@main
(6472f8c3a899): <
https://commits.webkit.org/310506@main
> Reviewed commits have been landed. Closing PR #61903 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug